<resources>
    <string name="app_name">ICL</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_fuentes">Fuentes de Alimentación</string>
    <string name="menu_dc">Alimentación DC</string>
    <string name="menu_1ac">Alimentación AC-1kVA</string>
    <string name="menu_2ac">Alimentación AC-500 VA</string>
    <string name="menu_protec">Protección contra Sobretensiones</string>
    <string name="menu_circuit">Circuit Breakers</string>
    <string name="menu_borneras">Borneras</string>
    <string name="menu_reles">Relés</string>
    <string name="menu_reles_g">Relés de uso general</string>
    <string name="menu_acondi">Acondicionadores de Señal</string>
    <string name="menu_conector">Conectores de uso rudo</string>
    <string name="menu_cables">Cables Preensamblados</string>
    <string name="menu_switches">Switches Ethernet</string>
    <string name="menu_poe">PoE y tecnología de instalación</string>
    <string name="menu_switches_admi">Switches Administrable</string>
    <string name="menu_conecti">Conectividad Remota Segura</string>
    <string name="menu_axioline">Axioline F</string>
    <string name="menu_hmis">HMIs</string>
    <string name="menu_marcaje">Marcaje</string>
    <string name="menu_instalacion">Instalación</string>
    <string name="alimentacion">Alimentación Confiable</string>
    <string name="conectividad">Conectividad</string>
    <string name="redes">Redes y conectividad remota</string>
    <string name="productividad">Productividad en el taller</string>
    <string name="pg1fa">¿Necesita una fuente de alimentación monofásica o trifásica?</string>
    <string name="pg2fa">¿Cuál es la tensión de salida de DC?</string>
    <string name="pg3fa">¿Cuál es la corriente de salida (amperios)?</string>
    <string name="pg4fa">¿Ha considerado la proteción contra sobre tensiones?</string>
    <string name="conClasif">La fuente de alimentación es de clasificación de Clase I, División 2</string>
    <string name="sinClasif">La fuente de alimentación no es de clasificación de Clase I, División 2</string>
    <string name="voltaje">Protección contra sobretensiones \nSeleccione el voltaje</string>
    <string name="corriente">Corriente Nominal</string>
    <string name="pg1ups">¿Requiere protocolo de comunicación?</string>
    <string name="pg2ups">¿Qué salida de potencia/corriente?</string>
    <string name="pg3ups">¿Qué tipo de dispositivo de almacenamiento de energía?</string>
    <string name="pg4ups">¿Cuál es el voltaje de entrada?</string>
    <string name="pg1ps">¿Qué tipo de señal necesitas proteger?</string>
    <string name="pg2ps">¿Requieres una conexión push-in, tornillo, RJ45 o D-SUB?</string>
    <string name="pg3ps">¿Cuál es el voltaje requerido?</string>
    <string name="pg4ps">¿Utilizarás conexión a tierra directa o indirecta?</string>
    <string name="pg5ps">¿Qué diseño: enchufable o no-enchufable?</string>
    <string name="pg6ps">¿Con o sin monitoreo de estado?</string>
    <string name="pg1cb">¿Necesita Circuit Breakers TMC o Electrónicos?</string>
    <string name="pg2cb">¿Lo requiere monocanal o multicanal?</string>
    <string name="pg3cb">¿Cuántos canales necesita?</string>
    <string name="pg4cb">¿Requiere protección UL 489 o UL 1077?</string>
    <string name="pg5cb">¿Cuántos polos se requieren?</string>
    <string name="pg6cb">¿Qué curva característica se requiere?</string>
    <string name="pg7cb">¿Qué amperaje se requiere?</string>
    <string name="pg8cb">¿Necesita accesorios para tener más funcionalidades?</string>
    <string name="pg9cb">¿Qué función necesita?</string>
    <string name="tmc">TMC</string>
    <string name="electro">Electrónicos</string>
    <string name="monocanal">Monocanal</string>
    <string name="multicanal">Multicanal</string>
    <string name="pg1bo">¿Qué tipo de conexión se adapta mejor a su aplicación?</string>
    <string name="pg2bo">¿Qué tamaño de cable estás usando?</string>
    <string name="pg3bo">¿Cuál es al amperaje necesario?</string>
    <string name="pg4bo">¿Cuántos puntos de conexión?</string>
    <string name="tapa_recom">Tapa final recomendada</string>
    <string name="puente_recom">Puente (2-posiciones) para unir terminales recomendado</string>
    <string name="acce_recom">Accesorios recomendados</string>
    <string name="destornillador">Destornillador</string>
    <string name="etiquetado">Etiquetado</string>
    <string name="lado">Lado</string>
    <string name="superior">Superior</string>
    <string name="pg1re">¿Qué tipo de relé necesita?</string>
    <string name="pg2re">¿Cuál es el tipo de voltaje de la bobina de entrada: DC o AC?</string>
    <string name="pg3re">¿Cuál es su corriente de salida (amperios)?</string>
    <string name="pg4re">¿Qué tipo de contactos necesita: SPDT, DPDT, etc?</string>
    <string name="pg5re">¿Qué tecnología de conexión: Tornillo (UT) o Push-in (PT)?</string>
    <string name="pg1as">¿Qué tipo de conversión y/o aislamiento necesita?</string>
    <string name="pg2as">¿Cuál es la alimentación del módulo?</string>
    <string name="pg3as">¿Cuál es su señal de entrada?</string>
    <string name="pg4as">¿Cuál es la señal de salida?</string>
    <string name="pg1co">¿Lo desea Standard (Metal) o Evo (Plástico)?</string>
    <string name="pg2co">¿Cuántos polos necesitas?</string>
    <string name="pg3co">¿Qué tecnología de conexión prefieres?</string>
    <string name="pg4co">¿Qué tipo de conexión (Macho/Hembra)?</string>
    <string name="pg5co">Montaje de Panel: ¿con o sin cubierta?</string>
    <string name="pg6co">Entrada de cables: ¿superior o lateral?</string>
    <string name="macho">Macho</string>
    <string name="hembra">Hembra</string>
    <string name="cubierta_c">Con cubierta</string>
    <string name="cubierta_s">Sin cubierta</string>
    <string name="lateral">Lateral</string>
    <string name="perfil_bajo">Perfil Bajo</string>
    <string name="perfil_alto">Perfil Alto</string>
    <string name="pg1ca">¿Qué tamaño de rosca necesita en su ser de cables: M8 o M12?</string>
    <string name="pg2ca">¿Cuántas posiciones (cables) se requieren?</string>
    <string name="pg3ca">¿Qué tipo de conector: macho o hembra?</string>
    <string name="pg4ca">¿La orientación del conector es recta o angulada?</string>
    <string name="pg5ca">¿Cuál es la longitud deseada del set de cables?</string>
    <string name="pg6ca">¿Chaqueta PUR blindado o no blindado?</string>
    <string name="pg7ca">¿CMAT blindado o no blindado?</string>
    <string name="pg8ca">¿Necesita un receptáculo de montaje frontal o posterior de acomplamiento?</string>
    <string name="blindado">Blindado</string>
    <string name="no_blindado">No blindado</string>
    <string name="frontal">Frontal</string>
    <string name="posterior">Posterior</string>
    <string name="cmat">CMAT</string>
    <string name="receptaculo">Receptáculo de montaje</string>
    <string name="pg1se">¿Cuántos puertos de cobre se requieren?</string>
    <string name="pg2se">¿Existe requerimiento de puertos especiales: POE y/o fibra óptica?</string>
    <string name="pg3se">¿Cuál es el número total de puertos requeridos?</string>
    <string name="pg4se">¿Qué velocidad se requiere en la red?</string>
    <string name="pg5se">¿Se requiere alimentación dual y contactos de alarma?</string>
    <string name="pg6se">¿La instalación está en un lugar peligroso?</string>
    <string name="condicion_extrema">Es para condiciones ambientales extremas presentes</string>
    <string name="no_condicion_extrema">No es para condiciones ambientales extremas presentes</string>
    <string name="pg1poe">¿Qué POE necesita?</string>
    <string name="pg2poe">¿Cuántos puertos de cobre se requieren?</string>
    <string name="pg3poe">Existe requerimiento de puertos especiales: POE y/o fibra óptica?</string>
    <string name="pg4poe">¿Cuál es el número total de puertos requeridos?</string>
    <string name="pg5poe">¿Qué velocidad se requiere en la red?</string>
    <string name="pg6poe">¿Se requiere alimentación dual y contactos de alarma?</string>
    <string name="pg7poe">¿La instalación está en un lugar peligroso?</string>
    <string name="pg8poe">¿Qué método de conexión tiene?</string>
    <string name="pg9poe">¿Cuál es el rango de temperatura?</string>
    <string name="pg10poe">¿Cuál es la potencia máxima permitida?</string>
    <string name="pg11poe">¿Tiene alguna característica especial?</string>
    <string name="pg12poe">¿Qué estándares POE cumple?</string>
    <string name="pg13poe">¿Qué tipo de patch panel es este?</string>
    <string name="pg14poe">¿Cómo está blindado?</string>
    <string name="pg15poe">¿Cómo se conecta el blindado?</string>
    <string name="pg16poe">¿Tiene protección contra sobretensión?</string>
    <string name="poe">PoE</string>
    <string name="poe_in">PoE Injector</string>
    <string name="patch_p">Patch Panels</string>
    <string name="pg1sa">¿Cuántos puertos de fibra óptica se requieren?</string>
    <string name="pg2sa">¿Cuál es el número total de puertos combinados?</string>
    <string name="pg3sa">¿Cuál es la velocidad?</string>
    <string name="pg4sa">¿Qué características especiales se incluyen?</string>
    <string name="pg1crs">¿Se puede instalar en áreas peligrosas?</string>
    <string name="pg2crs">¿Cuántos puertos de cobre tiene?</string>
    <string name="pg3crs">¿Cuál es el rango de temperatura?</string>
    <string name="pg4crs">¿Compatible con Mguard cloud?</string>
    <string name="pg5crs">¿Qué tipo de memoria externa tiene?</string>
    <string name="pg6crs">¿Cuenta con firewall completo?</string>
    <string name="pg7crs">¿Es capaz de establecer VPN?</string>
    <string name="pg8crs">¿Cuenta con DMZ?</string>
    <string name="pg9crs">¿Es capaz de trabajar con celular?</string>
    <string name="pg10crs">¿Puede caer de una conexión por cable a una red celular?</string>
    <string name="pg1ax">¿Necesita acopladores, controladores o módulos de entrada/salida?</string>
    <string name="pg2ax">¿Cuál es el protocolo deseado?</string>
    <string name="pg3ax">¿Lo desea discreto (digital), análogo o especial?</string>
    <string name="acompladores">Acopladores</string>
    <string name="controladores">Controladores</string>
    <string name="modulos_es">Módulos de entrada/salida</string>
    <string name="discreto">Discreto (digital)</string>
    <string name="analogo">Análogo</string>
    <string name="especial">Especial</string>
    <string name="pg1hmi">¿Qué tamaño de pantalla necesita?</string>
    <string name="pg2hmi">¿Qué resolución es requerida?</string>
    <string name="pg3hmi">¿Cuál es el brillo mínimo requerido?</string>
    <string name="pg4hmi">¿Cuántas horas de operación requiere?</string>
    <string name="pg5hmi">¿Qué tipo de funcionalidad táctil requiere?</string>
    <string name="pg6hmi">¿Qué tipo de procesador se necesita?</string>
    <string name="pg7hmi">¿Qué rango de temperatura se necesita?</string>
    <string name="pg8hmi">¿Qué nivel de protección se necesita?</string>
    <string name="pg9hmi">¿Qué tipo de aprobaciones especiales se necesitan?</string>
    <string name="pg1ma">¿Necesita material para marcar o necesita impresora?</string>
    <string name="pg2ma">¿Qué materiales usa para marcar cables?</string>
    <string name="pg3ma">¿Qué tamaño de cable está marcando?</string>
    <string name="pg4ma">¿Cuánta área de impresión necesita?</string>
    <string name="desc">Descripción</string>
    <string name="nmro_parte">Número de parte resultante de Phoenix Contact</string>
    <string name="desig">Designación</string>
    <string name="base_montaje">Base de montaje en panel</string>
    <string name="entrada_cables">Entrada de cables</string>
</resources>