<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_agregar"
            android:title="Agregar" />
    </group>

    <item android:title="@string/alimentacion">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_fuentes"
                    android:icon="@drawable/ic_arrow"
                    android:title="@string/menu_fuentes"/>
                <item
                    android:id="@+id/nav_dc"
                    android:icon="@drawable/ic_arrow"
                    android:title="@string/menu_dc"/>
                <item
                    android:id="@+id/nav_1ac"
                    android:icon="@drawable/ic_arrow"
                    android:title="@string/menu_1ac"/>
                <item
                    android:id="@+id/nav_2ac"
                    android:icon="@drawable/ic_arrow"
                    android:title="@string/menu_2ac"/>
                <item
                    android:id="@+id/nav_protec"
                    android:icon="@drawable/ic_arrow"
                    android:title="@string/menu_protec"/>
                <item
                    android:id="@+id/nav_circuit"
                    android:icon="@drawable/ic_arrow"
                    android:title="@string/menu_circuit"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/conectividad">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_acondi"
                    android:icon="@drawable/ic_arrow"
                    android:title="@string/menu_acondi" />
            </group>
        </menu>
    </item>

</menu>
