<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.iprocen.icl.ui.home.HomeFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_fuentes"
        android:name="com.iprocen.icl.ui.fuentesAl.FuentesAlFragment"
        android:label="@string/menu_fuentes"
        tools:layout="@layout/fragment_fuentes_al"/>

    <fragment
        android:id="@+id/nav_dc"
        android:name="com.iprocen.icl.ui.SAI_UPS.DCFragment"
        android:label="@string/menu_dc"
        tools:layout="@layout/fragment_ups_dc"/>

    <fragment
        android:id="@+id/nav_1ac"
        android:name="com.iprocen.icl.ui.SAI_UPS.AC1kVAFragment"
        android:label="@string/menu_1ac"
        tools:layout="@layout/fragment_ups_ac_1kva"/>

    <fragment
        android:id="@+id/nav_2ac"
        android:name="com.iprocen.icl.ui.SAI_UPS.AC500VAFragment"
        android:label="@string/menu_2ac"
        tools:layout="@layout/fragment_ups_ac_500va"/>

    <fragment
        android:id="@+id/nav_protec"
        android:name="com.iprocen.icl.ui.protecSobre.ProtecSobreFragment"
        android:label="@string/menu_protec"
        tools:layout="@layout/fragment_protec_sobre"/>

    <fragment
        android:id="@+id/nav_agregar"
        android:name="com.iprocen.icl.Agregar"
        android:label="Agregar"
        tools:layout="@layout/fragment_agregar" />

</navigation>