<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="6dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:padding="6dp"
            android:text="@string/desc"/>

        <TextView
            android:id="@+id/txt_desc1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/primary_text"
            android:padding="6dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:padding="6dp"
            android:text="@string/desig"/>

        <TextView
            android:id="@+id/txt_desig1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/primary_text"
            android:padding="6dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:padding="6dp"
            android:text="@string/nmro_parte"/>

        <TextView
            android:id="@+id/txt_nmro1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/primary_text"
            android:padding="6dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>