<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/primary_text"
        android:textStyle="bold"
        android:text="@string/nmro_parte"/>

    <TextView
        android:id="@+id/txt_nmro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/primary_text"
        android:paddingBottom="6dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:text="@string/cmat"/>

        <TextView
            android:id="@+id/txt_cmat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/primary_text"
            android:layout_marginStart="6dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:text="@string/receptaculo"/>

        <TextView
            android:id="@+id/txt_receptaculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/primary_text"
            android:layout_marginStart="6dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5px"
        android:background="@android:color/darker_gray"/>

</LinearLayout>